# puerro

./: Makefile  README.md  pyproject.toml  setup.py
src/: main.py
src/puerro/: cli.py
src/puerro/commands/: puerro_add.py  puerro_build.py  puerro_ghdl.py  puerro_init.py  puerro_make.py  puerro_sim.py  puerro_upload.py  puerro_verilog.py
src/puerro/utils/: config.py  filesystem.py
